<resources>
    <string name="app_name">Todos_HamzaSheikh</string>
    <string name="launch">New todo! </string>
    <string name="save">Save</string>
    <string name="upload_image">Upload Image</string>
    <string name="completed">Completed</string>
    <string name="contents">Contents</string>
    <string name="text">Text:</string>
    <string name="title">Title</string>
    <string name="new_todo">New Todo</string>
    <string name="welcome">Welcome!</string>
    <string name="todotitle1">TodoTitle1</string>
    <string name="todocontent1">TodoContent1</string>
</resources>